# agent-kanban

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  README.ru.md  alembic.ini  docker-compose.yml  pyproject.toml
docs/superpowers/plans/: 2026-07-06-agent-kanban-phase1-mvp.md  2026-07-06-agent-kanban-phase2-review-polish.md  2026-07-06-agent-kanban-phase3-git-pr.md  2026-07-06-agent-kanban-phase4-auth.md  2026-07-06-agent-kanban-phase5-minor-auth.md  2026-07-06-agent-kanban-phase6-rate-limit-cleanup.md  2026-07-06-agent-kanban-polish.md
docs/superpowers/specs/: 2026-07-05-agent-kanban-design.md
migrations/: env.py
migrations/versions/: 0001_initial.py  0002_auth.py  0003_phase5.py  0004_assignment.py
src/agent_kanban/: __init__.py  auth.py  cli.py  config.py  db.py  events.py  git.py  mcp_server.py  mcp_stdio_bridge.py  models.py  ratelimit.py  schemas.py  server.py  services.py
src/agent_kanban/routes/: artifacts.py  auth.py  comments.py  progress.py  projects.py  tasks.py  ws.py
tests/: conftest.py  test_auth.py  test_e2e_smoke.py  test_events.py  test_git.py  test_mcp_http_auth.py  test_mcp_server.py  test_models.py  test_ratelimit.py  test_routes_artifacts.py  test_routes_auth.py  test_routes_comments.py  test_routes_progress.py  test_routes_tasks.py  test_services.py  test_stdio_bridge.py  test_ws.py
web/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
web/src/: App.tsx  api.ts  i18n.ts  i18n.tsx  index.css  statusMeta.ts  theme.ts  types.ts
web/src/components/: ArtifactCard.tsx  Column.tsx  CommentList.tsx  NewTaskModal.tsx  ProgressFeed.tsx  TaskCard.tsx
web/src/pages/: Admin.tsx  Board.tsx  CardDetail.tsx  Login.tsx
