[project]
name = "agent-kanban"
version = "0.1.0"
description = "AI-native kanban board for agents via MCP"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlmodel>=0.0.22",
    "greenlet>=3.1",                  # required by sqlalchemy's async engine
    "asyncpg>=0.30",
    "alembic>=1.14",
    "psycopg2-binary>=2.9",          # for alembic sync operations
    "mcp>=1.27,<2.0",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "httpx>=0.27",                    # for stdio bridge HTTP client + tests
    "websockets>=13",
    "python-multipart>=0.0.12",
    "bcrypt>=4.2",
    "itsdangerous>=2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "ruff>=0.7",
    "mypy>=1.13",
]

[project.scripts]
kanban = "agent_kanban.cli:main"
kanban-mcp = "agent_kanban.mcp_stdio_bridge:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_kanban"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
